<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="cita"
            type="com.example.anamarin.pruebatec1.models.CitasMedicas"/>

        <variable
            name="handler"
            type="com.example.anamarin.pruebatec1.adapters.NuevaCitaAdapter"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/medium"
            >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_person"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_paciente"
                android:layout_marginLeft="@dimen/small"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/medium"
            >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_doctor"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_medico"
                android:layout_marginLeft="@dimen/small"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/medium"
            >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_today"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hora de la cita"
                android:layout_marginLeft="@dimen/small"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/medium"
            >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_picture"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foto_del_paciente"
                android:layout_marginLeft="@dimen/small"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/medium"
            >

            <ImageView
                android:layout_width="@dimen/icon"
                android:layout_height="@dimen/icon"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_history"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Historia del paciente"
                android:layout_marginLeft="@dimen/small"
                />

        </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_agregar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/agregar_cita"
                android:onClick="@{() -> handler.agregarCita()}"
                />

    </LinearLayout>
</layout>
